--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title>If you readin this know that you're really cool</title>
+<title>If you reading this, know that you're really cool!</title>
 </head>
 <body>
- <h1>If you readin this know that you're really cool </h1>
+ <h1>If you reading this, know that you're really cool!</h1>
+<p>This is my first paragraph in HTML</p>
+<p>I hope you'll like it</p>
 </body>
 </html>
