--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
  <h1>If you reading this, know that you're really cool!</h1>
 <p>This is my first paragraph in HTML</p>
-<p>I hope you'll like it</p>
+<p>I hope you like it</p>
 </body>
 </html>
