--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+  <title>background-color</title>
+  <style>
+   body{
+    background-color: #3366CC; 
+   }
 <title>If you reading this, know that you're really cool!</title>
 </head>
 <body>
