--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
    body{
     background-color: #3366CC; 
    }
+    h1 {
+    background-color: RGB(249, 201, 16); 
+   }
+   p {
+    background-color: maroon; 
+    color: white; 
+   }
 <title>If you reading this, know that you're really cool!</title>
 </head>
 <body>
