--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>If you reading this, know that you're really cool!</title>
   <style>
    body{
-    background-color: #FFFFFF; 
+    background-color: #FFA500; 
    }
     color: white; 
    }
