--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>If you reading this, know that you're really cool!</title>
+<title>                 HELLO WORLD! I'm Mr Avsanka</title>
   <style>
    body{
-    background-color: #FFA500; 
-    color: aqua; 
+    background-color: #000000; 
+    color: white; 
    }
  </style>
 </head>
 <body>
  <h1>If you reading this, know that you're really cool!</h1>
-<p>This is my first paragraph in HTML</p>
+<p>                     For all qestions speak to me</p>
 </body>
 </html>
