--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>                 HELLO WORLD! I'm Mr Avsanka</title>
+<title>LORDS SITE 1</title>
   <style>
    body{
     background-color: #000000; 
@@ -9,7 +9,7 @@
  </style>
 </head>
 <body>
- <h1>If you reading this, know that you're really cool!</h1>
+ <h1>                   HELLO WORLD! I'm Mr Avsanka</h1>
 <p>                     For all qestions speak to me</p>
 </body>
 </html>
