--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  </style>
 </head>
 <body>
-                        <h1>HELLO WORLD! I'm Mr Avsanka</h1>
-                        <p>For all qestions speak to me</p>
+<h1>HELLO WORLD! I'm Mr Avsanka</h1>
+<h2>For all qestions speak to me</h2>
 </body>
 </html>
