--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     background-color: #000000; 
     color: white; 
    }
+    .text { 
+      text-align: center;
+    } 
  </style>
 </head>
 <body>
 <h1>HELLO WORLD! I'm Mr Avsanka</h1>
-<h2>For all qestions speak to me</h2>
+<p1>For all qestions speak to me</p1>
 </body>
 </html>
