--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-<title>LORDS SITE 1</title>
-  <style>
-  .text {
-    text-align:  center;
-   }
- </style>
+<title>LORDS TEST</title>
+<style>
+body{
+background-color: #000000;
+color: white;
+}
+</style>
 </head>
 <body>
 <h1>HELLO WORLD! I'm Mr Avsanka</h1>
