--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ background-color: #000000;
 color: white;
 }
 </style>
+   <style>
+   .text {
+    text-align:  center;
+   }
+  </style>
 </head>
 <body>
 <h1>HELLO WORLD! I'm Mr Avsanka</h1>
