--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>LORDS SITE 1</title>
 <style>
 body{
-background-color: #000000;
-color: white;
+background-color: #FFFFFF;
+color: green;
 }
 </style>
 </head>
