--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-<title>LORDS SITE 1</title>
+<title>LORDS TEST</title>
 <style>
 body{
-background-color: #FFFFFF;
-color: green;
+background-color: #000000;
+color: white;
 }
 </style>
 </head>
 <body>
-<h1>HELLO WORLD! I'm Mr Avsanka</h1>
-<p1>For all qestions speak to me</p1>
+<h align="center"  style="color:#FFFFFF; font-size:50px">HELLO WORLD! I'm Mr Avsanka</h>
+<p align="center"  style="color:#FFFFFF; font-size:40px">For all qestions speak to me</p1>
 </body>
 </html>
