--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
 <head>
-<title>LORDS TEST</title>
+<title>LORDS SITE</title>
 <style>
 body{
 background-color: #000000;
-color: white;
 }
 </style>
 </head>
 <body>
-<h align="center"  style="color:#FFFFFF; font-size:50px">HELLO WORLD! I'm Mr Avsanka</h>
+<p align="center"  style="color:#FFFFFF; font-size:50px">HELLO WORLD! I'm Mr Avsanka</p1>
 <p align="center"  style="color:#FFFFFF; font-size:40px">For all qestions speak to me</p1>
 </body>
 </html>
