--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>LORDS</title>
+<title>LORDS1</title>
 <style>
 body{
 background-color: #000000;
@@ -8,7 +8,7 @@ background-color: #000000;
 </style>
 </head>
 <body>
-<p align="center"  style="color:#FFFFFF; font-size:200px">HELLO WORLD! I'm Mr Avsanka</p1>
+<p align="center"  style="color:#FFFFFF; font-size:1000px">HELLO WORLD! I'm Mr Avsanka</p1>
 <p align="center"  style="color:#FFFFFF; font-size:40px">For all qestions speak to me</p2>
 </body>
 </html>
