--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ background-color: #000000;
 </style>
 </head>
 <body>
-<p align="center"  style="color:#FFFFFF; font-size:10000px">HELLO WORLD! I'm Mr Avsanka</p1>
-<p align="center"  style="color:#FFFFFF; font-size:40px">For all qestions speak to me</p2>
+<p align="center"  style="color:#FFFFFF; font-size:10000px">VLAD PIDOR</p1>
+<p align="center"  style="color:#FFFFFF; font-size:40px">LEXA PIDOR</p2>
 </body>
 </html>
