--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>LORDS SITE1</title>
+<title>Very big title which can not be inside this </title>
 <style>
 body{
 background-color: #000000;
@@ -8,7 +8,7 @@ background-color: #000000;
 </style>
 </head>
 <body>
-<p align="center"  style="color:#FFFFFF; font-size:10000px">VLAD PIDOR</p1>
+<p align="center"  style="color:#FFFFFF; font-size:100px">VLAD PIDOR</p1>
 <p align="center"  style="color:#FFFFFF; font-size:40px">LEXA PIDOR</p2>
 </body>
 </html>
