--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ background-color: #000000;
 </style>
 </head>
 <body>
-<p align="center"  style="color:#FFFFFF; font-size:100px">VLAD PIDOR</p1>
-<p align="center"  style="color:#FFFFFF; font-size:40px">LEXA PIDOR</p2>
+<p align="center"  style="color:#FFFFFF; font-size:100px">Look down</p1>
+<p align="center"  style="color:#FFFFFF; font-size:40px">go fuck</p2>
 </body>
 </html>
