--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Very big title which can not be inside this </title>
+<title>Mistery site </title>
 <style>
 body{
 background-color: #000000;
@@ -9,6 +9,6 @@ background-color: #000000;
 </head>
 <body>
 <p align="center"  style="color:#FFFFFF; font-size:100px">Look down</p1>
-<p align="center"  style="color:#FFFFFF; font-size:40px">go fuck</p2>
+<p align="center"  style="color:#FFFFFF; font-size:40px">Look up</p2>
 </body>
 </html>
