--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	input.display {width: 166px; text-align: right;}
 	td.buttons {border-top: solid 1px silver;}	
 	input[type= button] {width: 40px; height: 30px;}
+	align="center"
 </style>
 </head>
 
